// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Bg /> should match snapshot 1`] = `
.c0 {
  background: #f7f7f7 url(IMAGE_MOCK);
}

<Div
  className="c0"
/>
`;

exports[`<Logo /> should match snapshot 1`] = `
.c0 {
  display: block;
  padding: 19px;
  background-image: url(IMAGE_MOCK);
  background-size: 38px 38px;
  background-repeat: no-repeat;
  background-position: 0 0;
}

<Link
  className="c0"
  replace={false}
  to="/"
/>
`;

exports[`<MobileImage /> should match snapshot 1`] = `
@media (max-width:41.6875em) {
  .c0 {
    max-width: 334px;
  }
}

@media (min-width:41.75em) {
  .c0 {
    width: 100%;
  }
}

<img
  className="c0"
/>
`;

exports[`<MobileImage /> should match snapshot w/ big 1`] = `
@media (max-width:41.6875em) {
  .c0 {
    display: none!important;
    max-width: 334px;
  }
}

@media (min-width:41.75em) {
  .c0 {
    width: 100%;
  }
}

<img
  className="c0"
/>
`;

exports[`<MobileImage /> should match snapshot w/ small 1`] = `
@media (max-width:41.6875em) {
  .c0 {
    max-width: 334px;
  }
}

@media (min-width:41.75em) {
  .c0 {
    display: none!important;
    width: 100%;
  }
}

<img
  className="c0"
/>
`;
